third_party/rust/pin-project/tests/ui/unstable-features/marker_trait_attr.stderr
error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Struct<_>`:
  --> $DIR/marker_trait_attr.rs:12:1
   |
12 | #[pin_project] //~ ERROR E0119
   | ^^^^^^^^^^^^^^ conflicting implementation for `Struct<_>`
...
19 | impl<T> Unpin for Struct<T> {}
   | --------------------------- first implementation here
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
